added db and pagination
