# pkg/models/network.go
@@ -1,0 +1,12 @@
+package models
+
+import (
+	"time"
+)
+
+type Network struct {
+	ID        uint      `json:"id" gorm:"primary_key"`
+	Name      string    `json:"name" gorm:"unique"`
+	CreatedAt time.Time `json:"created_at" gorm:"autoCreateTime"`
+	UpdatedAt time.Time `json:"updated_at" gorm:"autoUpdateTime"`
+}
